# spook-chat

./: Cargo.toml  docker-compose.yml
spook-chat-db/: Cargo.toml
spook-chat-db/migrations/: 20220528122719_create_tables.down.sql  20220528122719_create_tables.up.sql  20220528131253_add_email_address.down.sql  20220528131253_add_email_address.up.sql  20220605205737_add_invites.down.sql  20220605205737_add_invites.up.sql  20220606214919_add_permissions.down.sql  20220606214919_add_permissions.up.sql  20220612133619_owner_row_to_server_table.down.sql  20220612133619_owner_row_to_server_table.up.sql
spook-chat-db/src/: lib.rs
spook-chat-db/src/models/: channel.rs  invite.rs  message.rs  mod.rs  server.rs  session.rs  user.rs
src/: auth.rs  chat.rs  guards.rs  main.rs  servers.rs
