[package]
name = "spook_chat_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "macros"] }
uuid = { version = "1.1.0", features = ["v4"] }
